welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: not found: value avancenbPas
  	avancenbPas()
        ^